# hse-se-paps

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.deploy.yml  compose.yml  pyproject.toml  test_auth_flow.sh
.github/workflows/: continuous-integration.yml  docker-publish.yml
LabWork1/docs/: README.md
LabWork2/docs/: README.md
LabWork3/docs/: README.md
LabWork3/src/: main.py
LabWork4/: Makefile  pyproject.toml
LabWork4/docs/: README.md
LabWork4/src/: app.py
LabWork4/src/api/: __init__.py  chat_completions.py  completions.py  healthcheck.py
LabWork4/src/services/: __init__.py  settings.py  streaming.py
LabWork6/docs/: README.md
alembic/: env.py
alembic/versions/: 147690e0ca42_change_primary_keys_from_id_to_guid.py  8a87515892f4_initial_migration.py  9f0bdc2c468a_add_user_and_access_token_tables.py  d77bf5e46018_add_refresh_token_fields.py
docs/: LabWork1.md  LabWork2.md  LabWork3.md  LabWork4.md  LabWork5.md  LabWork6.md  README.md  openapi.json
src/: app.py  dependencies.py
src/api/: __init__.py  auth.py  chat_completions.py  completions.py  healthcheck.py  user.py
src/models/: __init__.py  access_token.py  base.py  request_log.py  user.py
src/services/: auth.py  permissions.py  request_tracer.py  requests_logger.py  settings.py  streaming.py
tests/: __init__.py  conftest.py  postman_auth_tests.json  test_api.py  test_get_token.sh  test_routers.py  test_services.py  test_simple.py
