[project]
name = "labwork4"
version = "0.1.0"
description = "api implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
]
